logs/sflvault-server.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/OpenSSL'...
Listing './lib/python3.5/site-packages/SFLvault_server-0.8.0.0.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyOpenSSL-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sflvault'...
Listing './lib/python3.5/site-packages/sflvault/lib'...
Compiling './lib/python3.5/site-packages/sflvault/lib/vault.py'...
***   File "./lib/python3.5/site-packages/sflvault/lib/vault.py", line 187
    except LookupError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sflvault/model'...
Listing './lib/python3.5/site-packages/sflvault/tests'...
Compiling './lib/python3.5/site-packages/sflvault/tests/__init__.py'...
***   File "./lib/python3.5/site-packages/sflvault/tests/__init__.py", line 98
    print "*** Deleting group: %s" % group['id']
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sflvault/views.py'...
***   File "./lib/python3.5/site-packages/sflvault/views.py", line 192
    print "Session not found... "
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/transaction'...
Listing './lib/python3.5/site-packages/transaction/tests'...
Listing './lib/python3.5/site-packages/transaction-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/venusian'...
Listing './lib/python3.5/site-packages/venusian/tests'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/attrerror'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/attrerror_package'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/attrerror_package/will_cause_import_error'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/import_and_scan'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/importerror'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/importerror_package'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/importerror_package/will_cause_import_error'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/importonly'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested/sub1'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested/sub1/subsub1'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested/sub2'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested/sub2/subsub2'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/one'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/pyc'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/pyc/subpackage'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/subpackages'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/subpackages/childpackage'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/two'...
Listing './lib/python3.5/site-packages/venusian-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/sqlalchemy'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.sqlalchemy-0.7.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
